# routes/api.php
@@ -40,18 +40,14 @@ Route::middleware('auth:api')->group( function () {
         Route::resource('users', UserController::class);
         Route::resource('teams', TeamController::class);
         Route::resource('team-members', TeamMemberController::class);
-        //Route::resource('workspaces', WorkspaceController::class);
         Route::resource('workspaces', WorkspaceController::class)->except(['index', 'show']);
         Route::resource('workspaceMembers', WorkspaceMemberController::class);
         Route::resource('boards', BoardsController::class);
         Route::resource('sections', SectionController::class);
         Route::resource('boardSections', BoardSectionController::class);
+        Route::get('list-members-by-workspace-id/{workspaceId}', [WorkspaceMemberController::class, 'listMembersByWorkspaceId']);
     });
     Route::get('workspaces', [WorkspaceController::class, 'index']);
     Route::get('workspaces/{workspaces}', [WorkspaceController::class, 'show']);
-    Route::get('list-workspaces', [UserDashboardController::class, 'listWorkspaces']);
-    Route::get('workspace-details/{id}', [UserDashboardController::class, 'workspaceDetails']);
-    Route::get('list-boards', [UserDashboardController::class, 'listBoards']);
     Route::post('/users/{user}/profile-image', [ImageController::class, 'storeProfileImage']);
-    Route::post('/workspaces/{workspace}/workspace-image', [ImageController::class, 'storeWorkspaceImage']);
 });
